# embedded-fonts

./: Cargo.toml
bdf-parser/: Cargo.toml
bdf-parser/src/: glyph.rs  helpers.rs  lib.rs  metadata.rs  properties.rs
bdf-parser/tests/: helpers.rs
eg-bdf/: Cargo.toml
eg-bdf-macros/: Cargo.toml
eg-bdf-macros/src/: lib.rs
eg-bdf/examples/: hello.rs
eg-bdf/src/: lib.rs
