[package]
name = "bdf-parser"
description = "Parse BDF files"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]
edition = "2018"
repository = "https://github.com/jamwaffles/embedded-fonts"
documentation = "https://jamwaffles.github.io/embedded-fonts"
categories = ["parser-implementations"]
keywords = ["parser", "bdf", "font", "nom"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"tests"
]

[badges]
travis-ci = { repository = "jamwaffles/embedded-fonts", branch = "master" }

[dependencies]
nom = "5.0.0"
embedded-graphics = { git = "https://github.com/jamwaffles/embedded-graphics.git", rev = "2a1df0fdf5f7d199122ec1d39fff22a50ee0493c"}

[dev-dependencies]
chardet = "0.2.4"
encoding = "0.2.33"
maplit = "1.0.1"
